Fixed #19 on mobile devices

--- a/css/base/variables.css
+++ b/css/base/variables.css
@@ -81,3 +81,14 @@
         --pw-drawer-width: 200px;
     }
 }
+
+@media (prefers-color-scheme: light) {
+    :root {
+        --system-theme:light;
+    }
+}
+@media (prefers-color-scheme: dark) {
+    :root {
+        --system-theme:dark;
+    }
+}
